update swagger Errors
