# API/internal/entities/genericResponse.go
@@ -1,13 +1,0 @@
-package entities
-
-// swagger:response genericResponse
-type swaggGenericResponse struct {
-	// in:body
-	Body struct {
-		Message string `json:"message"`
-	}
-}
-
-type GenericResponse struct {
-	Message string `json:"message"`
-}
